--- a/contacts.html
+++ b/contacts.html
@@ -1,121 +1,184 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- FAVICON -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/img/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/img/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/img/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/img/favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="/img/favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <link rel="shortcut icon" href="/img/favicon/favicon.ico" />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta
+      name="msapplication-config"
+      content="/img/favicon/browserconfig.xml"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- FAVICON END -->
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/bootstrap.css" />
+    <link rel="stylesheet" href="./styles/fonts.css" />
+    <link rel="stylesheet" href="./styles/contacts.css" />
+    <link rel="stylesheet" href="./styles/styleSidebar.css" />
+    <script src="./scripts/sidebar.js"></script>
+    <link rel="icon" href="./img/logo_dark.png" />
+    <title>Contacts</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- FAVICON -->
-  <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png" />
-  <link rel="manifest" href="/img/favicon/site.webmanifest" />
-  <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#5bbad5" />
-  <link rel="shortcut icon" href="/img/favicon/favicon.ico" />
-  <meta name="msapplication-TileColor" content="#da532c" />
-  <meta name="msapplication-config" content="/img/favicon/browserconfig.xml" />
-  <meta name="theme-color" content="#ffffff" />
-  <!-- FAVICON END -->
-  <link rel="stylesheet" href="./styles/style.css">
-  <link rel="stylesheet" href="./styles/bootstrap.css" />
-  <link rel="stylesheet" href="./styles/fonts.css" />
-  <link rel="stylesheet" href="./styles/contacts.css">
-  <link rel="stylesheet" href="./styles/styleSidebar.css">
-  <script src="./scripts/sidebar.js"></script>
-  <link rel="icon" href="./img/logo_dark.png">
-  <title>Contacts</title>
-</head>
+  <body onload="init(); includeHTML()">
+    <!-- load "sidebar.html into following div-tag" -->
+    <div w3-include-html="./templates/sidebar.html"></div>
 
-<body onload="init(); includeHTML()">
-  <!-- load "sidebar.html into following div-tag" -->
-  <div w3-include-html="./templates/sidebar.html"></div>
+    <div class="custom-style-contacts">
+      <div
+        id="contactsListContainer"
+        class="overflow-x-hidden overflow-y-auto"
+      ></div>
 
-  <div class="custom-style-contacts">
+      <div id="contactsMain" class="overflow-hidden">
+        <div id="contactsHeader" class="contacts-header">
+          <h1 class="fw-bold display-4 lh-120">Contacts</h1>
 
-    <div id="contactsListContainer" class="overflow-x-hidden overflow-y-auto">
-    </div>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="4"
+            height="63"
+            viewBox="0 0 4 63"
+            fill="none"
+          >
+            <path
+              d="M2 2V61"
+              stroke="#29ABE2"
+              stroke-width="3"
+              stroke-linecap="round"
+            />
+          </svg>
 
-    <div id="contactsMain" class="overflow-hidden">
-      <div id="contactsHeader" class="contacts-header">
-        <h1 class="fw-bold display-4 lh-120">Contacts</h1>
+          <span class="custom-fs-27">Better with a team</span>
 
-        <svg xmlns="http://www.w3.org/2000/svg" width="4" height="63" viewBox="0 0 4 63" fill="none">
-          <path d="M2 2V61" stroke="#29ABE2" stroke-width="3" stroke-linecap="round" />
-        </svg>
+          <!-- <div class="custom-btn-container"> -->
+          <button
+            class="fw-bold custom-lh-120 custom-btn pos-btn"
+            onclick="openOverlayContact()"
+          >
+            <span class="custom-fs-21">New contact</span>
+            <img src="./img/icon_add_contact.png" alt="" />
+          </button>
+          <!-- </div> -->
+        </div>
 
-        <span class="custom-fs-27">Better with a team</span>
+        <dialog close id="dialogContact">
+          <div class="d-flex align-items-center justify-content-around gap-5">
+            <div class="circle-dialog">
+              <img src="./img/test_circle.png" alt="" />
+            </div>
 
-        <!-- <div class="custom-btn-container"> -->
-        <button class="fw-bold custom-lh-120 custom-btn pos-btn" onclick="openOverlayContact()">
-          <span class="custom-fs-21">New contact</span>
-          <img src="./img/icon_add_contact.png" alt="">
-        </button>
-        <!-- </div> -->
-      </div>
+            <div>
+              <h1 id="dialog__name">Tatjana Wolf</h1>
+              <div class="d-flex gap-5">
+                <div class="icon-dialog d-flex align-items-center gap-2">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                  >
+                    <mask
+                      id="mask0_71421_3311"
+                      style="mask-type: alpha"
+                      maskUnits="userSpaceOnUse"
+                      x="0"
+                      y="0"
+                      width="24"
+                      height="24"
+                    >
+                      <rect width="24" height="24" fill="#D9D9D9" />
+                    </mask>
+                    <g mask="url(#mask0_71421_3311)">
+                      <path
+                        class="my-path"
+                        d="M5 19H6.4L15.025 10.375L13.625 8.975L5 17.6V19ZM19.3 8.925L15.05 4.725L16.45 3.325C16.8333 2.94167 17.3042 2.75 17.8625 2.75C18.4208 2.75 18.8917 2.94167 19.275 3.325L20.675 4.725C21.0583 5.10833 21.2583 5.57083 21.275 6.1125C21.2917 6.65417 21.1083 7.11667 20.725 7.5L19.3 8.925ZM17.85 10.4L7.25 21H3V16.75L13.6 6.15L17.85 10.4Z"
+                        fill="#2A3647"
+                      />
+                    </g>
+                  </svg>
+                  <span>Edit</span>
+                </div>
 
-      <dialog open id="dialogContact">
-        <div class="d-flex align-items-center justify-content-around gap-5">
-          <div class="circle-dialog">
-            <img src="./img/test_circle.png" alt="">
-          </div>
-
-          <div>
-            <h1>Tatjana Wolf</h1>
-            <div class="d-flex gap-5">
-
-              <div class="icon-dialog d-flex align-items-center gap-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                  <mask id="mask0_71421_3311" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24"
-                    height="24">
-                    <rect width="24" height="24" fill="#D9D9D9" />
-                  </mask>
-                  <g mask="url(#mask0_71421_3311)">
-                    <path class="my-path"
-                      d="M5 19H6.4L15.025 10.375L13.625 8.975L5 17.6V19ZM19.3 8.925L15.05 4.725L16.45 3.325C16.8333 2.94167 17.3042 2.75 17.8625 2.75C18.4208 2.75 18.8917 2.94167 19.275 3.325L20.675 4.725C21.0583 5.10833 21.2583 5.57083 21.275 6.1125C21.2917 6.65417 21.1083 7.11667 20.725 7.5L19.3 8.925ZM17.85 10.4L7.25 21H3V16.75L13.6 6.15L17.85 10.4Z"
-                      fill="#2A3647" />
-                  </g>
-                </svg>
-                <span>Edit</span>
+                <div class="icon-dialog d-flex align-items-center gap-2">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                  >
+                    <mask
+                      id="mask0_71421_4770"
+                      style="mask-type: alpha"
+                      maskUnits="userSpaceOnUse"
+                      x="0"
+                      y="0"
+                      width="24"
+                      height="24"
+                    >
+                      <rect width="24" height="24" fill="#D9D9D9" />
+                    </mask>
+                    <g mask="url(#mask0_71421_4770)">
+                      <path
+                        class="my-path"
+                        d="M7 21C6.45 21 5.97917 20.8042 5.5875 20.4125C5.19583 20.0208 5 19.55 5 19V6C4.71667 6 4.47917 5.90417 4.2875 5.7125C4.09583 5.52083 4 5.28333 4 5C4 4.71667 4.09583 4.47917 4.2875 4.2875C4.47917 4.09583 4.71667 4 5 4H9C9 3.71667 9.09583 3.47917 9.2875 3.2875C9.47917 3.09583 9.71667 3 10 3H14C14.2833 3 14.5208 3.09583 14.7125 3.2875C14.9042 3.47917 15 3.71667 15 4H19C19.2833 4 19.5208 4.09583 19.7125 4.2875C19.9042 4.47917 20 4.71667 20 5C20 5.28333 19.9042 5.52083 19.7125 5.7125C19.5208 5.90417 19.2833 6 19 6V19C19 19.55 18.8042 20.0208 18.4125 20.4125C18.0208 20.8042 17.55 21 17 21H7ZM7 6V19H17V6H7ZM9 16C9 16.2833 9.09583 16.5208 9.2875 16.7125C9.47917 16.9042 9.71667 17 10 17C10.2833 17 10.5208 16.9042 10.7125 16.7125C10.9042 16.5208 11 16.2833 11 16V9C11 8.71667 10.9042 8.47917 10.7125 8.2875C10.5208 8.09583 10.2833 8 10 8C9.71667 8 9.47917 8.09583 9.2875 8.2875C9.09583 8.47917 9 8.71667 9 9V16ZM13 16C13 16.2833 13.0958 16.5208 13.2875 16.7125C13.4792 16.9042 13.7167 17 14 17C14.2833 17 14.5208 16.9042 14.7125 16.7125C14.9042 16.5208 15 16.2833 15 16V9C15 8.71667 14.9042 8.47917 14.7125 8.2875C14.5208 8.09583 14.2833 8 14 8C13.7167 8 13.4792 8.09583 13.2875 8.2875C13.0958 8.47917 13 8.71667 13 9V16Z"
+                        fill="#2A3647"
+                      />
+                    </g>
+                  </svg>
+                  <span>Delete</span>
+                </div>
               </div>
-
-              <div class="icon-dialog d-flex align-items-center gap-2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                  <mask id="mask0_71421_4770" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="24"
-                    height="24">
-                    <rect width="24" height="24" fill="#D9D9D9" />
-                  </mask>
-                  <g mask="url(#mask0_71421_4770)">
-                    <path class="my-path"
-                      d="M7 21C6.45 21 5.97917 20.8042 5.5875 20.4125C5.19583 20.0208 5 19.55 5 19V6C4.71667 6 4.47917 5.90417 4.2875 5.7125C4.09583 5.52083 4 5.28333 4 5C4 4.71667 4.09583 4.47917 4.2875 4.2875C4.47917 4.09583 4.71667 4 5 4H9C9 3.71667 9.09583 3.47917 9.2875 3.2875C9.47917 3.09583 9.71667 3 10 3H14C14.2833 3 14.5208 3.09583 14.7125 3.2875C14.9042 3.47917 15 3.71667 15 4H19C19.2833 4 19.5208 4.09583 19.7125 4.2875C19.9042 4.47917 20 4.71667 20 5C20 5.28333 19.9042 5.52083 19.7125 5.7125C19.5208 5.90417 19.2833 6 19 6V19C19 19.55 18.8042 20.0208 18.4125 20.4125C18.0208 20.8042 17.55 21 17 21H7ZM7 6V19H17V6H7ZM9 16C9 16.2833 9.09583 16.5208 9.2875 16.7125C9.47917 16.9042 9.71667 17 10 17C10.2833 17 10.5208 16.9042 10.7125 16.7125C10.9042 16.5208 11 16.2833 11 16V9C11 8.71667 10.9042 8.47917 10.7125 8.2875C10.5208 8.09583 10.2833 8 10 8C9.71667 8 9.47917 8.09583 9.2875 8.2875C9.09583 8.47917 9 8.71667 9 9V16ZM13 16C13 16.2833 13.0958 16.5208 13.2875 16.7125C13.4792 16.9042 13.7167 17 14 17C14.2833 17 14.5208 16.9042 14.7125 16.7125C14.9042 16.5208 15 16.2833 15 16V9C15 8.71667 14.9042 8.47917 14.7125 8.2875C14.5208 8.09583 14.2833 8 14 8C13.7167 8 13.4792 8.09583 13.2875 8.2875C13.0958 8.47917 13 8.71667 13 9V16Z"
-                      fill="#2A3647" />
-                  </g>
-                </svg>
-                <span>Delete</span>
-              </div>
-
             </div>
           </div>
 
-        </div>
+          <p class="py-4">Contact Information</p>
 
-        <p class="py-4">Contact Information</p>
+          <h6 class="my-2">Email</h6>
+          <a id="dialog__email" class="text-decoration-none" href="mailto:"
+            >hallo@test.de</a
+          >
 
-        <h6 class="my-2">Email</h6>
-        <a class="text-decoration-none" href="mailto:">hallo@test.de</a>
-
-        <h6 class="my-2">Phone</h6>
-        <a phone href="tel:">01567283716</a>
-
-
-      </dialog>
+          <h6 class="mt-4 mb-2">Phone</h6>
+          <a id="dialog__phone" phone href="tel:">01567283716</a>
+        </dialog>
+      </div>
     </div>
 
-  </div>
+    <div
+      id="overlayContact"
+      class="rounded-start"
+      onclick="closeOverlay()"
+    ></div>
 
-  <div id="overlayContact" class="rounded-start" onclick="closeOverlay()">
-  </div>
-
-  <script src="./scripts/contacts.js"></script>
-  <script src="./scripts/bootstrap.js"></script>
-</body>
-
+    <script src="./scripts/contacts.js"></script>
+    <script src="./scripts/bootstrap.js"></script>
+  </body>
 </html>
