--- a/contacts.html
+++ b/contacts.html
@@ -41,6 +41,8 @@
     <link rel="stylesheet" href="./styles/contacts.css" />
     <link rel="stylesheet" href="./styles/styleSidebar.css" />
     <script src="./scripts/sidebar.js"></script>
+    <script src="./scripts/authenticate.js"></script>
+    <script src="./scripts/storage.js"></script>
     <link rel="icon" href="./img/logo_dark.png" />
     <title>Contacts</title>
   </head>
@@ -287,11 +289,9 @@
       </div>
     </div>
 
-    <div
-      id="overlayContact"
-      class="rounded-start"
-      onclick="closeOverlay()"
-    ></div>
+    <div class="background-dialog d-none" onclick="closeDialog()">
+
+    </div>
 
     <script src="./scripts/contacts.js"></script>
     <script src="./scripts/bootstrap.js"></script>
