--- a/summary.html
+++ b/summary.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                     <div class="d-flex flex-column justify-content-center">
-                        <div class="bold pb-2 text-center">
+                        <div id="whichDate" class="bold pb-2 text-center">
                             October 16, 2022
                         </div>
                         <div class="size08Em text-center">
