white pencil and ok

--- a/summary.html
+++ b/summary.html
@@ -109,9 +109,9 @@
                 </div>
     
                 <div class="item-3">
-                    <div class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center">
+                    <div onmouseover="whitePencil()" onmouseout="darkPencil()" class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center">
                         <div class="d-flex align-items-center">
-                            <img src="./img/icon_pencil.svg" alt="pencil">
+                            <img id="pencil" src="./img/icon_pencil.svg" alt="pencil">
                         </div>
                         <div class="d-flex flex-column align-items-center justify-content-center ps-3">
                             <div class="size3Em bold">
@@ -122,9 +122,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center">
+                    <div onmouseover="whiteOk()" onmouseout="darkOk()" class="bgWhite border py-3 px-5 rounded-5 d-flex justify-content-center">
                         <div class="d-flex align-items-center">
-                            <img src="./img/icon_ok.svg" alt="ok">
+                            <img id="ok" src="./img/icon_ok.svg" alt="ok">
                         </div>
                         <div class="d-flex flex-column align-items-center justify-content-center ps-3">
                             <div class="size3Em bold">
