--- a/board.html
+++ b/board.html
@@ -60,11 +60,11 @@
             <div class="d-flex align-items-center">
                 <div class="border ps-3 py-1 findTaskBtn d-flex justify-content-between align-items-center">
                     <input placeholder="Find task" class="inputfindTask border-end" type="text">
-                    <div class="d-flex justify-content-center align-items-center px-3">
+                    <div class="d-flex justify-content-center align-items-center px-3 cursorPointer">
                         <img src="./img/search2.svg" alt="search">
                     </div>
                 </div>
-                <div class="addTaskBoardBtn bold px-2 py-2 ms-4">
+                <div class="addTaskBoardBtn bold px-2 py-2 ms-4 cursorPointer">
                     Add task +
                 </div>
             </div>
@@ -73,21 +73,21 @@
             <div>
                 <div class="d-flex justify-content-between">
                     <div class="bold">Todo</div>
-                    <div><img src="./img/plusButton.svg" alt="plus"></div>
+                    <div class="cursorPointer"><img src="./img/plusButton.svg" alt="plus"></div>
                 </div>
                 <div>JS-Content</div>
             </div>
             <div>
                 <div class="d-flex justify-content-between">
                     <div class="bold">In Progress</div>
-                    <div><img src="./img/plusButton.svg" alt="plus"></div>
+                    <div class="cursorPointer"><img src="./img/plusButton.svg" alt="plus"></div>
                 </div>
                 <div>JS-Content</div>
             </div>
             <div>
                 <div class="d-flex justify-content-between">
                     <div class="bold">Awaiting Feedback</div>
-                    <div><img src="./img/plusButton.svg" alt="plus"></div>
+                    <div class="cursorPointer"><img src="./img/plusButton.svg" alt="plus"></div>
                 </div>
                 <div>JS-Content</div>
             </div>
